--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,34 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --tittle-header-color: #db00ff;
+  --text-color: #f1b2ce;
+  --tittle-section-color: #000028;
+  --accent: #ff0070;
+  background-image: url("../images/cover-image-dark.png");
+}
+
+.page.theme_dark .design__element {
+  visibility: visible;
+}
+
+.page.theme_dark .angle::before {
+  border-top: 1px solid var(--accent);
+  border-right: 1px solid var(--accent);
+}
+
+.page.theme_dark .angle::after {
+  border-bottom: 1px solid var(--accent);
+  border-left: 1px solid var(--accent);
+}
+
+.page.theme_dark .header__theme-menu-button {
+  color: var(--accent);
+}
+
+.page.theme_dark .header__theme-menu-button_active {
+  border: 1px solid var(--accent);
+}
+
+.page.theme_dark .header__theme-menu-button:hover {
+  outline: 1px solid var(--accent);
 }
