--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,357 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  margin: 0;
+  font-family: var(--main-font), sans-serif;
+  background-image: url("../images/cover-image.png");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.decorated-zone {
+  padding: 0 clamp(10px, 2.6vi, 20px);
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  min-height: 668px;
+  padding: clamp(10px, 2.6vi, 20px);
+}
+
+@media (768px <= width < 1024px) {
+  .header {
+    min-height: 1024px;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    min-height: 768px;
+  }
+}
+
+.design__element {
+  position: absolute;
+  top: clamp(10px, 2.6vi, 20px);
+  left: calc(100% - 35px - 25px - clamp(10px, 2.6vi, 20px));
+  color: var(--accent);
+  font-size: 18px;
+  line-height: 1.39;
+  text-transform: uppercase;
+}
+
+.design__element::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  margin-bottom: 2px;
+  margin-left: 10px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--accent);
+  background-color: var(--accent);
+}
+
+.angle::before {
+  content: "";
+  position: absolute;
+  top: clamp(10px, 2.6vi, 20px);
+  right: clamp(10px, 2.6vi, 20px);
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent);
+  border-right: 1px solid var(--accent);
+}
+
+.angle::after {
+  content: "";
+  position: absolute;
+  bottom: clamp(10px, 2.6vi, 20px);
+  left: clamp(10px, 2.6vi, 20px);
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent);
+  border-left: 1px solid var(--accent);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: center;
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+}
+
+.main__title {
+  color: var(--tittle-header-color);
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0 var(--accent);
+}
+
+@media (width >= 768px) {
+  .main__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header .main__title {
+    position: relative;
+    left: -20px;
+  }
+}
+
+.title {
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.title__header {
+  justify-self: end;
+  align-self: center;
+  max-width: 355px;
+  font-weight: 700;
+}
+
+@media (768px <= width < 1024px) {
+  .title__header {
+    max-width: 364px;
+  }
+}
+
+@media (width >= 1024px) {
+  .title__header {
+    max-width: 491px;
+  }
+}
+
+.title-decor {
+  color: var(--tittle-section-color);
+  background-color: var(--accent);
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 4px 13px;
+  color: var(--accent);
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 18px;
+  text-transform: lowercase;
+  background-color: transparent;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent);
+  padding: 3px 12px;
+}
+
+button:disabled {
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--accent);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  text-decoration: underline;
+}
+
+.main {
+  margin: clamp(40px, 10vi, 60px) 0;
+}
+
+.content__section {
+  display: grid;
+  gap: 20px;
+  margin-bottom: clamp(50px, 13vi, 80px);
+}
+
+@media (width >= 768px) {
+  .content__section:nth-child(odd) {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .content__section:nth-child(even):not(:last-child) {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .content__section:nth-child(even):not(:last-child) .title__section {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .content__section:nth-child(even):not(:last-child) .cards__list {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+  }
+}
+
+@media (width >=1024px) {
+  .content__section:nth-child(odd) {
+    gap: 10px;
+  }
+}
+
+.content__section:last-child {
+  gap: clamp(10px, 2.6vi, 20px);
+  margin-bottom: 0;
+}
+
+.cards__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+@media (width >= 1024px) {
+  .card__list-row {
+    flex-direction: row;
+  }
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+@media (width >= 1024px) {
+  .card {
+    min-width: 315px;
+  }
+}
+
+.title__section {
+  color: var(--accent);
+  font-weight: 700;
+}
+
+.subtitle__card {
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.3;
+}
+
+.text__card {
+  color: var(--text-color);
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.3;
+}
+
+.link__card {
+  text-decoration: none;
+  text-shadow: 2px 1px 0 var(--accent);
+}
+
+.link__card:hover {
+  text-decoration: underline;
+}
+
+.link__card:focus {
+  outline: none;
+}
+
+.link__card:focus-visible {
+  outline: 1px solid var(--text-color);
+}
+
+.gallery {
+  display: grid;
+  gap: clamp(10px, 2.6vi, 20px);
+}
+
+.image_gallery {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-height: 100%;
+}
+
+@media (width >= 768px) {
+  .gallery {
+    grid-template: repeat(3, 1fr);
+  }
+
+  .image_gallery {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .gallery__item-1 {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 1;
+  }
+
+  .gallery__item-2 {
+    grid-column: 3 / span 1;
+    grid-row: 1 / span 2;
+  }
+
+  .gallery__item-3 {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 2;
+  }
+
+  .gallery__item-4 {
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
+  }
+
+  .gallery__item-5 {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 1;
+  }
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 667px;
+}
+
+@media (768px <= width < 1024px) {
+  .footer {
+    min-height: 1024px;
+  }
+}
+
+@media (width >= 1024px) {
+  .footer {
+    min-height: 768px;
+  }
+}
+
+.footer .main__title {
+  text-shadow: 2px 2px 0 var(--accent);
 }
