--- a/styles/light.css
+++ b/styles/light.css
@@ -2,73 +2,36 @@
   :root {
     --bg-color: #fff1f7;
     --tittle-header-color: #ffc2e6;
+    --decorated-title-color: #353430;
     --text-color: #353430;
     --tittle-section-color: #353430;
     --accent: #ff8dcb;
-  }
-
-  .page {
-    background-image: url("../images/cover-image-light.png");
+    --menu-header-color: #353430;
+    --link-effects: #ff8dcb;
+    --main-font: "IBM Plex mono";
+    --bg-image: url("../images/cover-image-light.png");
+    --border-color: rgba(50, 49, 45, 0.4);
   }
 
   .design__element {
     visibility: hidden;
-  }
-
-  .angle::before {
-    border-top: 1px solid var(--text-color);
-    border-right: 1px solid var(--text-color);
-  }
-
-  .angle::after {
-    border-bottom: 1px solid var(--text-color);
-    border-left: 1px solid var(--text-color);
-  }
-
-  .header__theme-menu-button {
-    color: var(--text-color);
-  }
-
-  .header__theme-menu-button_active {
-    border: 1px solid var(--text-color);
-  }
-
-  .header__theme-menu-button:hover {
-    outline: 1px solid var(--text-color);
   }
 }
 
 .page.theme_light {
   --bg-color: #fff1f7;
   --tittle-header-color: #ffc2e6;
+  --decorated-title-color: #353430;
   --text-color: #353430;
   --tittle-section-color: #353430;
   --accent: #ff8dcb;
-  background-image: url("../images/cover-image-light.png");
+  --menu-header-color: #353430;
+  --link-effects: #ff8dcb;
+  --main-font: "IBM Plex mono";
+  --bg-image: url("../images/cover-image-light.png");
+  --border-color: rgba(50, 49, 45, 0.4);
 }
 
 .page.theme_light .design__element {
   visibility: hidden;
-}
-
-.page.theme_light .angle::before {
-  border-top: 1px solid var(--text-color);
-  border-right: 1px solid var(--text-color);
-}
-
-.page.theme_light .angle::after {
-  border-bottom: 1px solid var(--text-color);
-  border-left: 1px solid var(--text-color);
-}
-
-.page.theme_light .header__theme-menu-button {
-  color: var(--text-color);
-}
-
-.page.theme_light .header__theme-menu-button_active {
-  border: 1px solid var(--text-color);
-}
-
-.page.theme_light .header__theme-menu-button:hover {
-  outline: 1px solid var(--text-color);
 }
