--- a/styles/style.css
+++ b/styles/style.css
@@ -1,41 +1,31 @@
 .page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 0;
+  margin: auto;
+  padding: 0 clamp(10px, 2.6vi, 20px);
   font-family: var(--main-font), sans-serif;
-  background-image: url("../images/cover-image.png");
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-}
-
-.decorated-zone {
-  padding: 0 clamp(10px, 2.6vi, 20px);
 }
 
 .header {
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
-  min-height: 668px;
-  padding: clamp(10px, 2.6vi, 20px);
-}
-
-@media (768px <= width < 1024px) {
-  .header {
-    min-height: 1024px;
-  }
-}
-
-@media (width >= 1024px) {
-  .header {
-    min-height: 768px;
-  }
+  height: 100vh;
+  padding: clamp(10px, 2.6vi, 20px) 0;
 }
 
 .design__element {
   position: absolute;
   top: clamp(10px, 2.6vi, 20px);
-  left: calc(100% - 35px - 25px - clamp(10px, 2.6vi, 20px));
-  color: var(--accent);
+  left: calc(100% - 35px - 25px);
+  color: var(--menu-header-color);
   font-size: 18px;
   line-height: 1.39;
   text-transform: uppercase;
@@ -49,30 +39,30 @@
   margin-bottom: 2px;
   margin-left: 10px;
   border-radius: 50%;
-  box-shadow: 0px 0px 4px 2px var(--accent);
-  background-color: var(--accent);
+  box-shadow: 0px 0px 4px 2px var(--menu-header-color);
+  background-color: var(--menu-header-color);
 }
 
-.angle::before {
+.decorated-zone::before {
   content: "";
   position: absolute;
   top: clamp(10px, 2.6vi, 20px);
-  right: clamp(10px, 2.6vi, 20px);
+  right: 0;
   width: 25px;
   height: 25px;
-  border-top: 1px solid var(--accent);
-  border-right: 1px solid var(--accent);
+  border-top: 1px solid var(--menu-header-color);
+  border-right: 1px solid var(--menu-header-color);
 }
 
-.angle::after {
+.decorated-zone::after {
   content: "";
   position: absolute;
   bottom: clamp(10px, 2.6vi, 20px);
-  left: clamp(10px, 2.6vi, 20px);
+  left: 0;
   width: 25px;
   height: 25px;
-  border-bottom: 1px solid var(--accent);
-  border-left: 1px solid var(--accent);
+  border-bottom: 1px solid var(--menu-header-color);
+  border-left: 1px solid var(--menu-header-color);
 }
 
 .header__theme-menu {
@@ -99,7 +89,42 @@
   }
 }
 
-.main__title {
+.header__theme-menu-button {
+  border: none;
+  padding: 4px 13px;
+  color: var(--menu-header-color);
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 18px;
+  text-transform: lowercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--menu-header-color);
+  padding: 3px 12px;
+}
+
+button:disabled {
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--border-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--menu-header-color);
+}
+
+.main-title {
   color: var(--tittle-header-color);
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -108,11 +133,11 @@
 }
 
 @media (width >= 768px) {
-  .main__title {
+  .main-title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .header .main__title {
+  .header .main-title {
     position: relative;
     left: -20px;
   }
@@ -123,7 +148,12 @@
   line-height: 1.3;
 }
 
-.title__header {
+.title-decor {
+  color: var(--decorated-title-color);
+  background-color: var(--accent);
+}
+
+.header__subtitle {
   justify-self: end;
   align-self: center;
   max-width: 355px;
@@ -131,106 +161,72 @@
 }
 
 @media (768px <= width < 1024px) {
-  .title__header {
+  .header__subtitle {
     max-width: 364px;
   }
 }
 
 @media (width >= 1024px) {
-  .title__header {
+  .header__subtitle {
     max-width: 491px;
   }
 }
 
-.title-decor {
-  color: var(--tittle-section-color);
-  background-color: var(--accent);
-}
-
-.header__theme-menu-button {
-  border: none;
-  padding: 4px 13px;
-  color: var(--accent);
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 18px;
-  text-transform: lowercase;
-  background-color: transparent;
-}
-
-.header__theme-menu-button_active {
-  border: 1px solid var(--accent);
-  padding: 3px 12px;
-}
-
-button:disabled {
-  pointer-events: none;
-}
-
-.header__theme-menu-button:hover {
-  outline: 1px solid var(--accent);
-}
-
-.header__theme-menu-button:focus {
-  outline: none;
-}
-
-.header__theme-menu-button:focus-visible {
-  text-decoration: underline;
-}
-
 .main {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(50px, 13vi, 80px);
   margin: clamp(40px, 10vi, 60px) 0;
 }
 
-.content__section {
+.main__content-section {
   display: grid;
   gap: 20px;
-  margin-bottom: clamp(50px, 13vi, 80px);
 }
 
 @media (width >= 768px) {
-  .content__section:nth-child(odd) {
+  .main__content-section {
     grid-template-columns: 1fr 2fr;
   }
 
-  .content__section:nth-child(even):not(:last-child) {
-    grid-template-columns: 1fr 2fr;
-  }
-
-  .content__section:nth-child(even):not(:last-child) .title__section {
+  .main__content-section_rows .main__content-section_title {
     grid-column: 1/2;
     grid-row: 1/2;
   }
 
-  .content__section:nth-child(even):not(:last-child) .cards__list {
+  .main__content-section_rows .main__content-section_cards-list {
     grid-column: 1/-1;
     grid-row: 2/3;
   }
 }
 
 @media (width >=1024px) {
-  .content__section:nth-child(odd) {
+  .main__content-section_columns {
     gap: 10px;
   }
 }
 
-.content__section:last-child {
-  gap: clamp(10px, 2.6vi, 20px);
-  margin-bottom: 0;
+.main__content-section_column-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.cards__list {
+.main__content-section_title {
+  color: var(--tittle-section-color);
+  font-weight: 700;
+}
+
+.main__content-section_cards-list {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
 @media (width >= 1024px) {
-  .card__list-row {
-    flex-direction: row;
+  .main__content-section_cards-list_row {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(315px, 1fr));
   }
 }
 
@@ -240,25 +236,14 @@ button:disabled {
   gap: 10px;
 }
 
-@media (width >= 1024px) {
-  .card {
-    min-width: 315px;
-  }
-}
-
-.title__section {
-  color: var(--accent);
-  font-weight: 700;
-}
-
-.subtitle__card {
+.card__subtitle {
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
   line-height: 1.3;
 }
 
-.text__card {
+.card__text {
   color: var(--text-color);
   font-weight: 400;
   font-size: 18px;
@@ -266,21 +251,27 @@ button:disabled {
   line-height: 1.3;
 }
 
-.link__card {
+.card__link {
   text-decoration: none;
-  text-shadow: 2px 1px 0 var(--accent);
+  text-shadow: 2px 2px 0 var(--link-effects);
 }
 
-.link__card:hover {
-  text-decoration: underline;
+.card__link:hover {
+  border-bottom: 1px solid var(--text-color);
 }
 
-.link__card:focus {
+.card__link:focus {
   outline: none;
 }
 
-.link__card:focus-visible {
+.card__link:focus-visible {
   outline: 1px solid var(--text-color);
+}
+
+.main__gallery-section {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(10px, 2.6vi, 20px);
 }
 
 .gallery {
@@ -306,27 +297,27 @@ button:disabled {
     object-fit: cover;
   }
 
-  .gallery__item-1 {
+  .gallery_item:first-child {
     grid-column: 1 / span 2;
     grid-row: 1 / span 1;
   }
 
-  .gallery__item-2 {
+  .gallery_item:nth-child(2) {
     grid-column: 3 / span 1;
     grid-row: 1 / span 2;
   }
 
-  .gallery__item-3 {
+  .gallery_item:nth-child(3) {
     grid-column: 1 / span 1;
     grid-row: 2 / span 2;
   }
 
-  .gallery__item-4 {
+  .gallery_item:nth-child(4) {
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
   }
 
-  .gallery__item-5 {
+  .gallery_item:last-child {
     grid-column: 2 / span 2;
     grid-row: 3 / span 1;
   }
@@ -337,21 +328,9 @@ button:disabled {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 667px;
+  height: 100vh;
 }
 
-@media (768px <= width < 1024px) {
-  .footer {
-    min-height: 1024px;
-  }
-}
-
-@media (width >= 1024px) {
-  .footer {
-    min-height: 768px;
-  }
-}
-
-.footer .main__title {
+.footer .main-title {
   text-shadow: 2px 2px 0 var(--accent);
 }
