--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
   padding: 0 clamp(10px, 2.6vi, 20px);
   font-family: var(--main-font), sans-serif;
   background-color: var(--bg-color);
